[package]
name = "chris-driscol-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "schema_gen"
path = "src/schema_gen.rs"

[dependencies]
async-graphql = "7.0.7"
async-graphql-axum = "7.0.17"
async-graphql-relay = "0.5.0"
axum = "0.8.8"
tokio = { version = "1.40.0", features = ["full"] }
