[package]
name = "chris-driscol-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"

[[bin]]
name = "schema_gen"
path = "src/schema_gen.rs"

[dependencies]
async-graphql = "7.0.7"
async-graphql-axum = "7.0.17"
async-graphql-relay = "0.5.0"
axum = "0.8.8"
aws-config = "=1.5.16"
aws-sdk-sesv2 = "=1.54.0"
http = "1.1.0"
lambda_http = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
